--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,30 @@
-body {
-    font-family: 'Montserrat', sans-serif;
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+html,body{
+  background-color: rgb(246, 229, 208);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.tagline {
+  border: 10px solid rebeccapurple;
+}
+
+.plotsummary {
+  border: 10px solid rgb(238, 174, 35);
+}
+
+.movieinfo {
+  border: 10px solid rgb(151, 42, 214);
+}
+
+.listnumberone {
+  border: 10px solid rgb(14, 238, 133);
+}
+
+/* .imagepadding {
+  margin-left: 100px;
+  margin-right: 100px;
+} */
+
+.websitelink {
+  border: 10px solid rgb(151, 224, 34);
+  padding-top: 15px;
+}
